<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">"Open Money Tracker (OMT) is an accounting application. You can manage your incomes and expenses in easy way. Accounts and currency exchange rates are also available.

To help us make OMT better, please report bugs to"<a href="http://4pda.ru/forum/index.php?showtopic=755203"> the 4PDA forum</a>; new feature ideas are very welcome too. Find answers or start a discussion on<a href="http://4pda.ru/forum/index.php?showtopic=755203"> forum</a>".

OMT is"<a href="https://en.wikipedia.org/wiki/Open-source_software"> open source software</a>", so everyone is encouraged to become a contributor. Non-developers can also help. For instance, you can help translate OMT, provide screenshots or blog about OMT.

OMT is released under the"<a href="https://ru.wikipedia.org/wiki/GNU_General_Public_License#GPL_v3"> GNU-GPL v3 license</a> and source code is available<a href="https://github.com/evgenii-kanivets/Money-Tracker"> on GitHub</a>".

"<a href="https://ua.linkedin.com/in/evgeniikanivets">Developer profile on LinkedIn.</a></string>
    <string name="about_summary">Version %1$s (Android %2$s)</string>
    <string name="account">Account</string>
    <string name="account_was_removed">Account was removed</string>
    <string name="add">Add</string>
    <string name="add_account">Add account</string>
    <string name="add_exchange_rate">Add exchange rate</string>
    <string name="add_expense">Add expense</string>
    <string name="add_income">Add income</string>
    <string name="all_time">All time</string>
    <string name="amount">Amount</string>
    <string name="app_name">Money Tracker</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="archive">Archive</string>
    <string name="arrow">" -> "</string>
    <string name="backup_data">Backup/Restore</string>
    <string name="backup_is_restored">Backup is restored</string>
    <string name="backup_now">Backup now</string>
    <string name="backup_restored">Chosen backup file %1$s has been restored successfully.</string>
    <string name="bank_buys">Bank buys</string>
    <string name="bank_sells">Bank sells</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="cant_archive_default_account">"You can't archive a default account."</string>
    <string name="category">Category</string>
    <string name="change_date">CHANGE THE DATE</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="color">Color</string>
    <string name="com.crashlytics.android.build_id">eecd44f6-5df5-4792-b5ff-eda70ec7eca0</string>
    <string name="convert_from">Convert from</string>
    <string name="convert_to">Convert to</string>
    <string name="currency">Currency</string>
    <string name="custom">Custom</string>
    <string name="date">Date</string>
    <string name="day">Day</string>
    <string name="default_account">Default account</string>
    <string name="default_currency">Default currency</string>
    <string name="delete">Delete</string>
    <string name="delete_account_message">"Are you sure about deleting this account? It can't be restored after."</string>
    <string name="delete_account_title">Delete account</string>
    <string name="display_precision">Display precision</string>
    <string name="error_exchange_rates">Error! Specify exchange rates.</string>
    <string name="expenses">Expenses</string>
    <string name="export">Export</string>
    <string name="failed_create_backup">Failed to create backup.</string>
    <string name="failed_restore_backup">Failed to restore backup.</string>
    <string name="fetching_backups">Fetching backups…</string>
    <string name="field_cant_be_empty">"Field can't be empty."</string>
    <string name="from">From</string>
    <string name="goal">Goal</string>
    <string name="help">Help</string>
    <string name="import_help">"To import records into application:
 1. Create CSV file in format - 
"<b> time;title;category;price;currency.</b>"
 2. Copy its content to text field.
 3. Press import button. In few seconds you will see how much records has been imported.
 
"<b> Note:</b>" time - timestamp value in milliseconds; currency - 3 symbols code of currency.
"<b> Example:</b> 1466948795712;metro;transport;-20.0;UAH</string>
    <string name="importing_records">Importing records…</string>
    <string name="incomes">Incomes</string>
    <string name="initial_sum">Initial sum</string>
    <string name="like_money_tracker">Do you like MoneyTracker?</string>
    <string name="making_backup">Making backup…</string>
    <string name="maybe_later">Maybe Later</string>
    <string name="month">Month</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="no_thank_you">No, Thank You</string>
    <string name="none">None</string>
    <string name="one_account_needed">At least one account is needed.</string>
    <string name="password_toggle_content_description">Toggle password visibility</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="period_from_to">%1$s - %2$s</string>
    <string name="precision_int">9.99$ = 9$</string>
    <string name="precision_math">9.99$ = 10$</string>
    <string name="precision_none">9.99$ = 9.99$</string>
    <string name="pref_about">pref_about</string>
    <string name="pref_default_account">pref_default_account</string>
    <string name="pref_default_currency">pref_default_currency</string>
    <string name="pref_display_precision">pref_display_precision</string>
    <string name="price">Price</string>
    <string name="rate_it_on_gp">Rate it on Google Play!</string>
    <string name="record_in_future">"Can't create a record in future."</string>
    <string name="records_imported">%1$s records has been imported</string>
    <string name="report">Report</string>
    <string name="restore">Restore</string>
    <string name="restoring_backup">Restoring backup…</string>
    <string name="same_currencies">"Can't convert between same currencies."</string>
    <string name="search_menu_title">Search</string>
    <string name="settings">Settings</string>
    <string name="short_summary">Short summary</string>
    <string name="slash">/</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="summary">Summary</string>
    <string name="text_import">Import</string>
    <string name="time">Time</string>
    <string name="title">Title</string>
    <string name="title_accounts">Accounts</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_edit_account">Edit Account</string>
    <string name="title_add_account">Add account</string>
    <string name="title_add_expense">Add expense</string>
    <string name="title_add_income">Add income</string>
    <string name="title_charts">Results</string>
    <string name="title_edit_expense">Edit expense</string>
    <string name="title_edit_income">Edit income</string>
    <string name="title_exchange_rates">Exchange rates</string>
    <string name="title_import_export">Import/Export</string>
    <string name="title_records">Records</string>
    <string name="title_settings">Settings</string>
    <string name="to">To</string>
    <string name="too_much_for_exchange">"It's too much for exchange."</string>
    <string name="too_much_for_transfer">"It's too much for transfer."</string>
    <string name="too_rich">"You can't be so rich."</string>
    <string name="too_rich_or_poor">"You can't be so rich or so poor."</string>
    <string name="total">TOTAL</string>
    <string name="total_expenses">Total expense</string>
    <string name="total_incomes">Total income</string>
    <string name="transfer">Transfer</string>
    <string name="want_erase_and_restore">Do you really want to erase all current data and restore backup file %1$s? Be sure to backup current data.</string>
    <string name="warning">Warning</string>
    <string name="week">Week</string>
    <string name="year">Year</string>
    <string name="yes_very">Yes!</string>
</resources>
