<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@id/group_1">
        <item android:icon="@drawable/ic_accounts" android:id="@id/nav_accounts" android:title="@string/title_accounts" />
        <item android:icon="@drawable/ic_exchange_rates" android:id="@id/nav_rates" android:title="@string/title_exchange_rates" />
        <item android:icon="@drawable/ic_charts" android:id="@id/nav_charts" android:title="@string/title_charts" />
    </group>
    <group android:id="@id/group_2">
        <item android:icon="@drawable/ic_backup" android:id="@id/nav_backup" android:title="@string/backup_data" />
        <item android:icon="@drawable/ic_import_export" android:id="@id/nav_import_export" android:title="@string/title_import_export" />
    </group>
    <group android:id="@id/group_3">
        <item android:icon="@drawable/ic_settings" android:id="@id/nav_settings" android:title="@string/settings" />
    </group>
</menu>
