<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/content" android:padding="@dimen/activity_horizontal_margin" android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.design.widget.TextInputLayout android:id="@id/til_title" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <EditText android:id="@id/et_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/title" android:maxLines="1" android:singleLine="true" android:inputType="text" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout android:id="@id/til_init_sum" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <EditText android:id="@id/et_init_sum" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/initial_sum" android:maxLines="1" android:singleLine="true" android:inputType="numberDecimal|numberSigned" />
    </android.support.design.widget.TextInputLayout>
    <TextView android:theme="@style/Text_Hint" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/currency" />
    <android.support.v7.widget.AppCompatSpinner android:id="@id/spinner" android:layout_width="fill_parent" android:layout_height="@dimen/spinner_height" />
</LinearLayout>
