<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/content" android:padding="@dimen/activity_horizontal_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_behavior="@string/appbar_scrolling_view_behavior"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="fill_parent">
            <TextView android:theme="@style/Text_Hint" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/date" />
            <TextView android:textAppearance="?android:textAppearanceListItemSmall" android:gravity="center_vertical" android:id="@id/tv_date" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minHeight="?android:listPreferredItemHeightSmall" android:paddingStart="@dimen/quarter_margin" android:paddingEnd="?android:listPreferredItemPaddingEnd" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="fill_parent">
            <TextView android:theme="@style/Text_Hint" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/time" />
            <TextView android:textAppearance="?android:textAppearanceListItemSmall" android:gravity="center_vertical" android:id="@id/tv_time" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minHeight="?android:listPreferredItemHeightSmall" android:paddingStart="@dimen/quarter_margin" android:paddingEnd="?android:listPreferredItemPaddingEnd" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:theme="@style/Text_Hint" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/account" />
            <android.support.v7.widget.AppCompatSpinner android:id="@id/spinner_account" android:layout_width="fill_parent" android:layout_height="@dimen/spinner_height" />
        </LinearLayout>
    </LinearLayout>
    <android.support.design.widget.TextInputLayout android:id="@id/til_price" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <EditText android:id="@id/et_price" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/price" android:maxLines="1" android:singleLine="true" android:inputType="numberDecimal" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout android:id="@id/til_title" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <EditText android:id="@id/et_title" android:layout_width="fill_parent" android:layout_height="fill_parent" android:hint="@string/title" android:maxLines="1" android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout android:id="@id/til_category" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <AutoCompleteTextView android:id="@id/et_category" android:layout_width="fill_parent" android:layout_height="fill_parent" android:hint="@string/category" android:maxLines="1" android:singleLine="true" android:completionThreshold="1" />
    </android.support.design.widget.TextInputLayout>
</LinearLayout>
