<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:layout_gravity="center_horizontal" android:paddingTop="@dimen/activity_vertical_margin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/like_money_tracker" android:paddingStart="@dimen/activity_horizontal_margin" android:paddingEnd="@dimen/activity_horizontal_margin" style="@style/Text_Title" />
    <TextView android:gravity="center" android:layout_gravity="center_horizontal" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/rate_it_on_gp" android:paddingStart="@dimen/activity_horizontal_margin" android:paddingEnd="@dimen/activity_horizontal_margin" style="@style/Text_Subheading" />
    <View android:background="@color/divider_grey" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <Button android:layout_gravity="center_horizontal" android:id="@id/yes_button" android:background="#ffffffff" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/yes_very" style="@style/Text_Body1" />
        <View android:background="@color/divider_grey" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <Button android:layout_gravity="center_horizontal" android:id="@id/maybeButton" android:background="#ffffffff" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/maybe_later" style="@style/Text_Body1" />
        <View android:background="@color/divider_grey" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <Button android:layout_gravity="center_horizontal" android:id="@id/thanksButton" android:background="#ffffffff" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/no_thank_you" style="@style/Text_Body1" />
    </LinearLayout>
</LinearLayout>
