<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ListView android:layout_gravity="center_horizontal" android:id="@id/list_view" android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="0.0dip" android:drawSelectorOnTop="true" android:layout_weight="1.0" />
    <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/btn_add_income" android:background="@drawable/selector_add_income" android:padding="@dimen/normal_margin" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/add_income" android:layout_weight="1.0" />
        <Button android:id="@id/btn_add_expense" android:background="@drawable/selector_add_expense" android:padding="@dimen/normal_margin" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/add_expense" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>
