<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:id="@id/content" android:padding="@dimen/activity_horizontal_margin" android:layout_width="fill_parent" android:layout_height="fill_parent" android:baselineAligned="false" app:layout_behavior="@string/appbar_scrolling_view_behavior"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" android:layout_marginEnd="@dimen/half_margin">
        <TextView android:theme="@style/Text_Hint" android:layout_gravity="start" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/from" />
        <android.support.v7.widget.AppCompatSpinner android:id="@id/spinner_from" android:layout_width="fill_parent" android:layout_height="@dimen/spinner_height" />
        <android.support.design.widget.TextInputLayout android:id="@id/til_from_amount" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <EditText android:id="@id/et_from_amount" android:nextFocusDown="@id/et_to_amount" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/amount" android:maxLines="1" android:ems="10" android:singleLine="true" android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" android:layout_marginStart="@dimen/half_margin">
        <TextView android:theme="@style/Text_Hint" android:layout_gravity="start" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/to" />
        <android.support.v7.widget.AppCompatSpinner android:id="@id/spinner_to" android:layout_width="fill_parent" android:layout_height="@dimen/spinner_height" />
        <android.support.design.widget.TextInputLayout android:id="@id/til_to_amount" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <EditText android:id="@id/et_to_amount" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/amount" android:maxLines="1" android:ems="10" android:singleLine="true" android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
</LinearLayout>
